tests/rosetta/out/Smalltalk/angles-geometric-normalization-and-conversion.out
/workspace/mochi/tests/rosetta/out/Smalltalk/angles-geometric-normalization-and-conversion.st:20: parse error, expected '|' or identifier
