tests/rosetta/out/Smalltalk/angles-geometric-normalization-and-conversion.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| d2d g2g m2m r2r d2g d2m d2r g2d g2m g2r m2d m2g m2r r2d r2g r2m main angles a |
d2d := [:d | (d % 360). ].
g2g := [:g | (g % 400). ].
m2m := [:m | (m % 6400). ].
r2r := [:r | (r % ((2 * 3.141592653589793))). ].
d2g := [:d | ((((d2d value: d) * 400)) / 360). ].
d2m := [:d | ((((d2d value: d) * 6400)) / 360). ].
d2r := [:d | ((((d2d value: d) * 3.141592653589793)) / 180). ].
g2d := [:g | ((((g2g value: g) * 360)) / 400). ].
g2m := [:g | ((((g2g value: g) * 6400)) / 400). ].
g2r := [:g | ((((g2g value: g) * 3.141592653589793)) / 200). ].
m2d := [:m | ((((m2m value: m) * 360)) / 6400). ].
m2g := [:m | ((((m2m value: m) * 400)) / 6400). ].
m2r := [:m | ((((m2m value: m) * 3.141592653589793)) / 3200). ].
r2d := [:r | ((((r2r value: r) * 180)) / 3.141592653589793). ].
r2g := [:r | ((((r2r value: r) * 200)) / 3.141592653589793). ].
r2m := [:r | ((((r2r value: r) * 3200)) / 3.141592653589793). ].
main := [ angles := {-2. -1. 0. 1. 2. 6.2831853. 16. 57.2957795. 359. 399. 6399. 1e+06}.
Transcript show: 'degrees normalized_degs gradians mils radians'; cr.
angles do: [:a |.
Transcript show: ((((((((((((((((((a asString)) + (' '))) + ((d2d value: a asString)))) + (' '))) + ((d2g value: a asString)))) + (' '))) + ((d2m value: a asString)))) + (' '))) + ((d2r value: a asString)))) printString; cr.
].
.
Transcript show: '
gradians normalized_grds degrees mils radians'; cr.
angles do: [:a |.
Transcript show: ((((((((((((((((((a asString)) + (' '))) + ((g2g value: a asString)))) + (' '))) + ((g2d value: a asString)))) + (' '))) + ((g2m value: a asString)))) + (' '))) + ((g2r value: a asString)))) printString; cr.
].
.
Transcript show: '
mils normalized_mils degrees gradians radians'; cr.
angles do: [:a |.
Transcript show: ((((((((((((((((((a asString)) + (' '))) + ((m2m value: a asString)))) + (' '))) + ((m2d value: a asString)))) + (' '))) + ((m2g value: a asString)))) + (' '))) + ((m2r value: a asString)))) printString; cr.
].
.
Transcript show: '
radians normalized_rads degrees gradians mils'; cr.
angles do: [:a |.
Transcript show: ((((((((((((((((((a asString)) + (' '))) + ((r2r value: a asString)))) + (' '))) + ((r2d value: a asString)))) + (' '))) + ((r2g value: a asString)))) + (' '))) + ((r2m value: a asString)))) printString; cr.
].
. ].
main value.
